--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -59,27 +58,13 @@
     }
 
     .navbar.scrolled .logo {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
-      cursor: pointer;
-      font-size: 22px;
-      background: red;
-      color: #fff;
-      font-weight: bold;
-      letter-spacing: 1px;
+      display: none;
     }
 
-    /* Hide logo-circle when not scrolled */
     .logo-circle {
       display: none;
     }
-    .navbar.scrolled .logo {
-      display: none;
-    }
+
     .navbar.scrolled .logo-circle {
       display: flex;
       align-items: center;
@@ -96,6 +81,7 @@
       border: none;
       outline: none;
     }
+
     .logo-circle:active,
     .logo-circle:focus {
       background: #fff;
@@ -103,8 +89,7 @@
     }
 
     /* Hero */
-  
-.hero {
+    .hero {
       position: relative;
       height: 100vh;
       overflow: hidden;
@@ -115,6 +100,7 @@
       height: 200%;
       object-fit: cover;
     }
+
     .hero-overlay {
       position: absolute;
       top: 50%;
@@ -213,14 +199,15 @@
       max-width: 700px;
       text-align: center;
     }
+
     .vision-section h2 {
       color: red;
       font-size: 2.5rem;
       margin-bottom: 1.2rem;
-      font-family: 'Poppins', sans-serif;
       font-weight: 700;
       letter-spacing: 1px;
     }
+
     .vision-summary {
       font-family: 'Georgia', 'Times New Roman', serif;
       font-size: 1.2rem;
@@ -238,9 +225,11 @@
       padding: 2rem 1rem 1rem 1rem;
       text-align: center;
     }
+
     .footer .footer-links {
       margin-bottom: 1rem;
     }
+
     .footer .footer-links a {
       color: #fff;
       margin: 0 1rem;
@@ -248,9 +237,11 @@
       text-decoration: none;
       transition: color 0.2s;
     }
+
     .footer .footer-links a:hover {
       color: red;
     }
+
     .footer .social-links a {
       color: #fff;
       margin: 0 0.5rem;
@@ -258,6 +249,7 @@
       text-decoration: none;
       transition: color 0.2s;
     }
+
     .footer .social-links a:hover {
       color: #e1306c;
     }
@@ -275,13 +267,105 @@
         transform: none;
       }
     }
+
+    /* Responsive: Phones & Small Screens */
+    @media (max-width: 768px) {
+      .navbar {
+        width: 90%;
+        padding: 8px 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 20px;
+        flex-direction: column;
+        gap: 10px;
+      }
+
+      .navbar nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .navbar nav a {
+        margin: 5px 0;
+        font-size: 14px;
+      }
+
+      .navbar.scrolled {
+        width: 60px;
+        height: 60px;
+        left: 20px;
+      }
+
+      .navbar.scrolled .logo-circle {
+        width: 60px;
+        height: 60px;
+        font-size: 18px;
+      }
+
+      .hero video {
+        height: 100%;
+        object-fit: cover;
+      }
+
+      .hero-overlay h1 {
+        font-size: 32px;
+      }
+
+      .hero-overlay p {
+        font-size: 16px;
+      }
+
+      .hero-buttons .btn {
+        padding: 10px 20px;
+        font-size: 14px;
+      }
+
+      .quote-section {
+        padding: 0 1rem;
+        font-size: 1.1rem;
+      }
+
+      .timeline-container {
+        padding-left: 20px;
+      }
+
+      .timeline-item::before {
+        left: -20px;
+        width: 16px;
+        height: 16px;
+      }
+
+      .vision-section h2 {
+        font-size: 2rem;
+      }
+
+      .vision-summary {
+        font-size: 1rem;
+        padding: 0 1rem;
+      }
+
+      .footer .footer-links a,
+      .footer-contact a {
+        font-size: 0.85rem;
+      }
+
+      .footer .social-links a {
+        font-size: 1.2rem;
+      }
+
+      .footer button {
+        font-size: 13px;
+        padding: 6px 12px;
+      }
+    }
   </style>
 </head>
 <body>
   <!-- Header -->
   <header class="navbar fade-in" id="main-header">
     <span class="logo">Kashish</span>
-    <button class="logo-circle" id="logo-circle" aria-label="Go to Home" style="display:none;">K</button>
+    <button class="logo-circle" id="logo-circle" aria-label="Go to Home">K</button>
     <nav>
       <a href="#home">Home</a>
       <a href="photos.html">Portfolio</a>
@@ -300,7 +384,7 @@
       <h1>Kashish Gautam</h1>
       <p>Runway & Commercial Model</p>
       <div class="hero-buttons">
-        <a href="photos.html" class="btn">View Portfolio</a>
+        <a href="portfolio_html.html" class="btn">View Portfolio</a>
       </div>
     </div>
   </section>
@@ -329,7 +413,7 @@
     </div>
   </section>
 
-  <!-- Vision Section (moved after timeline, with heading) -->
+  <!-- Vision -->
   <section class="vision-section fade-in" style="animation-delay:0.8s;">
     <h2>My Vision</h2>
     <p class="vision-summary">
@@ -338,65 +422,51 @@
   </section>
 
   <!-- Footer -->
-<footer class="footer fade-in" style="animation-delay:1s;">
-  <div class="footer-content" style="max-width: 900px; margin: 0 auto;">
-    
-    <!-- Bio -->
-    <p style="margin-bottom: 1.2rem; font-size: 0.95rem; color: #bbb;">
-      Kashish Gautam is an emerging fashion model focused on editorial, runway, and commercial work, bringing elegance and authenticity to every frame.
-    </p>
-    
-    <!-- Social and Contact -->
-    <div class="footer-contact" style="margin-bottom: 1rem;">
-      <a href="kashishg2231@gmail.com" style="color: red; font-size: 0.95rem; text-decoration: none;">📩 kashishg2231@gmail.com</a>
+  <footer class="footer fade-in" style="animation-delay:1s;">
+    <div class="footer-content" style="max-width: 900px; margin: 0 auto;">
+      <p style="margin-bottom: 1.2rem; font-size: 0.95rem; color: #bbb;">
+        Kashish Gautam is an emerging fashion model focused on editorial, runway, and commercial work, bringing elegance and authenticity to every frame.
+      </p>
+      <div class="footer-contact" style="margin-bottom: 1rem;">
+        <a href="mailto:kashishg2231@gmail.com" style="color: red; font-size: 0.95rem; text-decoration: none;">📩 kashishg2231@gmail.com</a>
+      </div>
+      <div class="social-links" style="margin-bottom: 1rem;">
+        <a href="https://www.instagram.com/ms_kashish_01?igsh=MTdiYzNoMHl6bmEybA==" target="_blank" aria-label="Instagram">
+          <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+            stroke-linecap="round" stroke-linejoin="round">
+            <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
+            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/>
+            <line x1="17.5" y1="6.5" x2="17.5" y2="6.5"/>
+          </svg>
+        </a>
+      </div>
+      <div class="footer-links" style="margin-bottom: 1rem;">
+        <a href="#home">Home</a>
+        <a href="photos.html">Portfolio</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </div>
+      <button onclick="window.scrollTo({ top: 0, behavior: 'smooth' })" style="
+        margin-top: 1rem;
+        padding: 8px 16px;
+        background: red;
+        color: #fff;
+        border: none;
+        border-radius: 20px;
+        font-size: 14px;
+        cursor: pointer;
+        transition: background 0.3s;">
+        ↑ Scroll to Top
+      </button>
+      <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2025 Kashish Gautam. All rights reserved.</p>
     </div>
-
-    <div class="social-links" style="margin-bottom: 1rem;">
-      <a href="https://www.instagram.com/ms_kashish_01?igsh=MTdiYzNoMHl6bmEybA==" target="_blank" aria-label="Instagram">
-        <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-          stroke-linecap="round" stroke-linejoin="round">
-          <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
-          <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/>
-          <line x1="17.5" y1="6.5" x2="17.5" y2="6.5"/>
-        </svg>
-      </a>
-    </div>
-
-    <!-- Quick Links -->
-    <div class="footer-links" style="margin-bottom: 1rem;">
-      <a href="#home">Home</a>
-      <a href="photos.html">Portfolio</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </div>
-
-    <!-- Scroll to Top -->
-    <button onclick="window.scrollTo({ top: 0, behavior: 'smooth' })" style="
-      margin-top: 1rem;
-      padding: 8px 16px;
-      background: red;
-      color: #fff;
-      border: none;
-      border-radius: 20px;
-      font-size: 14px;
-      cursor: pointer;
-      transition: background 0.3s;">
-      ↑ Scroll to Top
-    </button>
-
-    <!-- Copyright -->
-    <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2025 Kashish Gautam. All rights reserved.</p>
-  </div>
-</footer>
-
+  </footer>
 
   <script>
-    // Animation delay for fade-in
     document.querySelectorAll('.fade-in').forEach((el, i) => {
       el.style.animationDelay = (i * 0.2) + 's';
     });
 
-    // Sticky header on scroll and logo-circle toggle
     const header = document.getElementById('main-header');
     const logoCircle = document.getElementById('logo-circle');
     const logo = header.querySelector('.logo');
@@ -412,7 +482,6 @@
       }
     });
 
-    // Scroll to top when logo-circle is clicked
     logoCircle.addEventListener('click', function(e) {
       e.preventDefault();
       window.scrollTo({ top: 0, behavior: 'smooth' });
