--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
       <h1>Kashish Gautam</h1>
       <p>Runway & Commercial Model</p>
       <div class="hero-buttons">
-        <a href="portfolio_html.html" class="btn">View Portfolio</a>
+        <a href="photos.html" class="btn">View Portfolio</a>
       </div>
     </div>
   </section>
